# CPS2004_Assignment

Task 1/Village_War_Game/: CMakeLists.txt  attack.h  buildings.cpp  compile.bat  do_actions.h  header.h  main.cpp  map.cpp  resources.cpp  run.bat  stop_game.cpp  take_turn.cpp  troops.cpp  villages.cpp  welcome_message.cpp
Task 2/Minesweeper/source_code/: Controller.java  Grid.java  Main.java
Task 2/Minesweeper/src/: Cells.java  Controller.java  Grid.java  Main.java  Window.java
Village_War_Game/: CMakeLists.txt  header.h  main.cpp
Village_War_Game/Includes/: Game_Setup.cpp
